k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rehabilita-service
  namespace: rehabilita
spec:
  selector:
    app: rehabilita-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
